optimizations and fixes

--- a/app/webapp/i18n/i18n.properties
+++ b/app/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Bookings
+appTitle=Space Flight Bookings
 
 #YDES: Application description
 appDescription=
